# doc/openapi.json
@@ -32,7 +32,6 @@
                               "topic":"test1",
                               "networkID":1,
                               "tenantID":"tenant1",
-                              "referenceID":"reference1",
                               "resourceID":"resource1",
                               "timestampStart":"2021-03-11T11:35:00",
                               "timestampEnd":"null",
@@ -100,7 +99,6 @@
                            "topic":"test1",
                            "networkID":1,
                            "tenantID":"tenant1",
-                           "referenceID":"reference1",
                            "resourceID":"resource1",
                            "timestampStart":"2021-03-11T11:35:00",
                            "timestampEnd":"null",
@@ -179,7 +177,6 @@
                            "topic":"test1",
                            "networkID":1,
                            "tenantID":"tenant1",
-                           "referenceID":"reference1",
                            "resourceID":"resource1",
                            "timestampStart":"2021-03-11T11:35:00",
                            "timestampEnd":"null",
@@ -266,7 +263,6 @@
                            "topic":"test1",
                            "networkID":1,
                            "tenantID":"tenant1",
-                           "referenceID":"reference1",
                            "resourceID":"resource1",
                            "timestampStart":"2021-03-11T11:35:00",
                            "timestampEnd":"null",
@@ -388,7 +384,6 @@
                            "topic":"test1",
                            "networkID":1,
                            "tenantID":"tenant1",
-                           "referenceID":"reference1",
                            "resourceID":"resource1",
                            "timestampStart":"2021-03-11T11:35:00",
                            "timestampEnd":"null",
@@ -467,7 +462,6 @@
                            "topic":"test1",
                            "networkID":1,
                            "tenantID":"tenant1",
-                           "referenceID":"reference1",
                            "resourceID":"resource1",
                            "timestampStart":"2021-03-11T11:35:00",
                            "timestampEnd":"null",
@@ -527,7 +521,6 @@
                "monitoring_endpoint",
                "data_source_type",
                "tenant_id",
-               "reference_id",
                "context_ids",
                "metrics"
             ],
@@ -559,10 +552,6 @@
                },
                "tenant_id":{
                   "title":"Tenant Id",
-                  "type":"string"
-               },
-               "reference_id":{
-                  "title":"Reference Id",
                   "type":"string"
                },
                "context_ids":{
@@ -674,7 +663,6 @@
                "metrics",
                "status",
                "tenant_id",
-               "reference_id"
             ],
             "type":"object",
             "properties":{
@@ -750,10 +738,6 @@
                   "title":"Tenant Id",
                   "type":"string"
                },
-               "reference_id":{
-                  "title":"Reference Id",
-                  "type":"string"
-               }
             }
          },
          "Response_Error_Model":{
